# Dus-Noise-Pollution

./: 3.eda.ipynb  DUS_Mehrave.ipynb  GeoPandas_Static.ipynb  Multi_layer_folium_map.ipynb  Multi_layer_map_with_matplot_and_geopandas.rar  Noise Pollution Dashboard.ipynb  Process.md  README.md  Strassenverkehrslärm_Gebbäudedatei_2018.csv  avg day&night per neighborhood.ipynb  dus_polygon.dbf  dus_polygon.shp  dus_polygon.shx  geopandas - Meh2.ipynb  geopandas - MehVu.ipynb  geopandas.ipynb  geopandas_choropleth.ipynb  kepler_choro.ipynb  keplergl.ipynb  pyproject.toml  requirements.txt
Datasets/Stadtteile/: Düsseldorf_Stadtteile.dbf  Düsseldorf_Stadtteile.shx  Stadtteile_-_D%C3%BCsseldorf.xml
Notebooks/: 1. loading & cleaning the data.ipynb  2. geometry extraction using geopy & merging csv.ipynb  Noise Pollution Dashboard.ipynb
Stadtteile/: Düsseldorf_Stadtteile.shp
